# scholarinboxcli

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/scholarinboxcli/: cli.py  config.py
src/scholarinboxcli/api/: client.py  endpoints.py
src/scholarinboxcli/commands/: __init__.py  auth.py  bookmarks.py  collections.py  common.py  conferences.py  papers.py
src/scholarinboxcli/formatters/: domain_tables.py  json_fmt.py  table.py
src/scholarinboxcli/services/: __init__.py  collections.py  paper_sort.py
tests/: test_api_client_mocked.py  test_cli_smoke.py  test_collection_resolution.py  test_domain_tables.py  test_paper_sort.py  test_table_formatter.py
