[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scholarinboxcli"
version = "0.1.0"
description = "CLI for Scholar Inbox (authenticated web API)"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = ["scholar", "research", "cli", "bibliography"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "typer>=0.9.0",
    "httpx>=0.25.0",
    "rich>=13.0.0",
]

[project.scripts]
scholarinboxcli = "scholarinboxcli.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/scholarinboxcli"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
